<resources>
    <string name="app_name"> Hillfort Tracker </string>
    <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
    <string name="hint_hillfortTitle"> Hillfort Title </string>
    <string name="hint_hillfortDescription"> Hillfort Description </string>
    <string name="hint_hillfortVisited"> Visited </string>
    <string name="hint_hillfortNotes"> Additional Notes </string>
    <string name="button_addHillfort"> Add Hillfort </string>
    <string name="menu_addHillfort"> Add </string>
    <string name="menu_saveHillfort">Save</string>
    <string name="save_hillfort"> Save Hillfort </string>
    <string name="menu_cancelHillfort"> Cancel </string>
    <string name="menu_deleteHillfort"> Delete </string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_changeImage"> Change Image </string>
    <string name="select_hillfort_image"> Select Hillfort Image </string>
    <string name="button_location"> Set Location </string>
    <string name="title_activity_map"> Map </string>
    <string name="title_activity_hillfort_maps"> Map of Discovered Hillforts </string>
    <string name="hillfort_image_placeholder">Hillfort Image</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>
    <string name="title_activity_hillfort_list">Hillfort Collection</string>
    <string name="title_activity_hillfort">Add/Edit Hillfort</string>
    <string name="title_activity_edit_location">Hillfort Location</string>
    <string name="title_activity_login"> Signup/Login to Hillfort Tracker</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
</resources>
