<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.hillfort.views.hillfort.HillfortView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/appBarLayout">

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="342dp"
                android:layout_height="37dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortDescription" />

            <EditText
                android:id="@+id/hillfortDescription"
                android:layout_width="178dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_hillfortDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/lng"
                app:layout_constraintHorizontal_bias="0.276"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortTitle" />

            <EditText
                android:id="@+id/hillfortTitle"
                android:layout_width="178dp"
                android:layout_height="42dp"
                android:layout_marginTop="72dp"
                android:autofillHints=""
                android:hint="@string/hint_hillfortTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.145"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/lngText"
                android:layout_width="33dp"
                android:layout_height="21dp"
                android:layout_marginTop="36dp"
                android:text="Lng:"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toStartOf="@+id/lng"
                app:layout_constraintHorizontal_bias="0.607"
                app:layout_constraintStart_toEndOf="@+id/hillfortDescription"
                app:layout_constraintTop_toBottomOf="@+id/latText" />

            <TextView
                android:id="@+id/latText"
                android:layout_width="35dp"
                android:layout_height="21dp"
                android:layout_marginTop="80dp"
                android:text="Lat:"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toStartOf="@+id/lat"
                app:layout_constraintHorizontal_bias="0.588"
                app:layout_constraintStart_toEndOf="@+id/hillfortTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lat"
                android:layout_width="73dp"
                android:layout_height="18dp"
                android:layout_marginTop="80dp"
                android:text="00.000000"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.682"
                app:layout_constraintStart_toEndOf="@+id/hillfortTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lng"
                android:layout_width="69dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="44dp"
                android:text="00.000000"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lat" />

            <ImageView
                android:id="@+id/hillfortImage"
                android:layout_width="283dp"
                android:layout_height="97dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.465"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                app:srcCompat="@mipmap/ic_launcher" />

            <CheckBox
                android:id="@+id/hillfortVisited"
                android:layout_width="93dp"
                android:layout_height="34dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="40dp"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/hint_hillfortVisited"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapView" />

            <EditText
                android:id="@+id/additionalNotes"
                android:layout_width="179dp"
                android:layout_height="31dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:background="#ffffed"
                android:hint="@string/hint_hillfortNotes"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="10"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapView" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="329dp"
                android:layout_height="153dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>